# burn-bench

./: README.md
.github/workflows/: benchmarks.yml
crates/backend-comparison/: Cargo.toml  README.md
crates/backend-comparison/benches/: all_reduce.rs  attention.rs  autodiff.rs  binary.rs  bool_select.rs  conv2d.rs  conv3d.rs  conv_transpose2d.rs  conv_transpose3d.rs  custom_gelu.rs  data.rs  grid_sample.rs  launch_overhead.rs  linear.rs  load_record.rs  matmul.rs  matmul_fused.rs  max_pool2d.rs  random.rs  reduce.rs  remote.rs  softmax.rs  to_device.rs  transformer_encoder.rs  unary.rs
crates/backend-comparison/src/: lib.rs
crates/burnbench/: README.md
crates/burnbench/src/: __private.rs
crates/burnbench/src/runner/: base.rs  dependency.rs  reports.rs
