[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "This crate is used to time the execution of various computations, from operation kernels to complex model scenarios."
edition.workspace = true
license.workspace = true
name = "backend-comparison"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn-bench/tree/main/backend-comparison"
version = "0.1.0"

# Two orthogonal concerns are kept separate:
#
# * Backend (the *device*) is a runtime choice. Every backend that can be
#   compiled on the host is linked in by default (see the OS-conditional `burn`
#   dependency below) and the concrete one is picked at runtime by injecting the
#   right `Device`. Selecting more devices never adds builds.
#
# * Framework decorators (`fusion`, `autotune`) are compile-time, so each
#   combination is a separate build. They are default-on features that the
#   runner toggles through `--build` profiles (e.g. `no-fusion`). `std` is not
#   toggleable here: the always-linked GPU backends require it.
[features]
default = ["fusion", "autotune"]

# Compile-time framework decorators, toggled via `--build` profiles.
fusion = ["burn/fusion"]
autotune = ["burn/autotune"]

# Backends that depend on external libraries, kept opt-in so the default build
# stays self-contained. `tch` is enabled automatically by the runner when a
# `tch-*` device is requested.
tch = ["burn/tch"]
ndarray-simd = ["burn/simd"]
ndarray-blas-accelerate = ["burn/accelerate"]
ndarray-blas-netlib = ["burn/blas-netlib"]
ndarray-blas-openblas = ["burn/openblas"]
rocm = ["burn/rocm"]

# Special benchmark capabilities.
multi-device = []
remote = ["server", "burn/remote"]
server = ["burn/server"]

[dependencies]
# Backends that compile cleanly on every platform are always enabled; the
# concrete one is selected at runtime via the device. Platform-specific backends
# are enabled through the target-conditional tables below. `fusion`/`autotune`
# are intentionally *not* listed here: they are toggleable `--build` features.
# burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false }
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = [
    "std",
    "autodiff",
    "wgpu",
    "webgpu",
    "cpu",
    "flex",
    "ndarray",
] }

burnbench = { path = "../burnbench" }

arboard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
os_info = { workspace = true }
percent-encoding = { workspace = true }
phf = { workspace = true }
rand = { version = "0.10.0" }                                # pull the same version as burn
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }
wgpu = { workspace = true }
wsl = { workspace = true }

# CUDA, ROCm and Vulkan compile on Linux (they don't necessarily run on every
# machine, but linking them in lets the device be selected at runtime).
# ROCm links directly instead of at runtime so it must be enabled via a feature.
[target.'cfg(target_os = "linux")'.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = [
    "cuda",
    "vulkan",
] }

# Windows: CUDA and Vulkan (ROCm is Linux-only).
[target.'cfg(target_os = "windows")'.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = [
    "cuda",
    "vulkan",
] }

# macOS: Metal (CUDA/ROCm/Vulkan don't make sense here).
[target.'cfg(target_os = "macos")'.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = [
    "metal",
] }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
semver = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true }

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "binary"

[[bench]]
harness = false
name = "launch-overhead"
path = "benches/launch_overhead.rs"

[[bench]]
harness = false
name = "max-pool2d"
path = "benches/max_pool2d.rs"

[[bench]]
harness = false
name = "conv-transpose2d"
path = "benches/conv_transpose2d.rs"

[[bench]]
harness = false
name = "conv-transpose3d"
path = "benches/conv_transpose3d.rs"

[[bench]]
harness = false
name = "conv2d"

[[bench]]
harness = false
name = "conv3d"

[[bench]]
harness = false
name = "matmul"

[[bench]]
harness = false
name = "linear"

[[bench]]
harness = false
name = "matmul-fused"
path = "benches/matmul_fused.rs"

[[bench]]
harness = false
name = "data"

[[bench]]
harness = false
name = "load-record"
path = "benches/load_record.rs"

[[bench]]
harness = false
name = "custom-gelu"
path = "benches/custom_gelu.rs"

[[bench]]
harness = false
name = "transformer-encoder"
path = "benches/transformer_encoder.rs"

[[bench]]
harness = false
name = "autodiff"

[[bench]]
harness = false
name = "reduce"

[[bench]]
harness = false
name = "random"

[[bench]]
harness = false
name = "remote"
required-features = ["remote"]

[[bench]]
harness = false
name = "softmax"

[[bench]]
harness = false
name = "grid_sample"

[[bench]]
harness = false
name = "bool_select"

[[bench]]
harness = false
name = "attention"

[[bench]]
harness = false
name = "to-device"
path = "benches/to_device.rs"
required-features = ["multi-device"]

[[bench]]
harness = false
name = "all-reduce"
path = "benches/all_reduce.rs"
required-features = ["multi-device"]
